fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body {
   overflow-y: scroll; 
   color: var(--main-text-color);
   background-color: var(--main-bg-color);
+  overflow-x: hidden;
  
 }
 
